single-card edit improvements * avoid full page swap! after editing 1 card * conditionally reference single-card-editor component such that setup-editor is invoked when entering edit mode   * allows moving focus logic into setup-editor * use r/track! for receiving global expand/collapsed state changes * modify layout of paste_bar: button groups aligned to left and right

--- a/resources/public/css/main.css
+++ b/resources/public/css/main.css
@@ -529,7 +529,6 @@ ul.system-card-list {
   justify-content: center;
   padding: var(--paste-bar-padding);
   margin-top: 15px;
-  position: relative;
 }
 
 .pastebar.global-edit {
@@ -541,8 +540,8 @@ ul.system-card-list {
 }
 
 .pastebar .edit-actions {
-  position: absolute;
   right: var(--paste-bar-padding);
+  margin-left: auto;
 }
 
 /*#endregion */
